@@ -1,3 +1,7 @@
+2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* StackPanel.cs: Minor improvement in MeasureOverride, finished MakeVisible.
+
 2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* StackPanel.cs: Fixed layout.
